perf(inventory): aggregate stacks in SQL and lazy-load entries
The grouped Lager built every display stack in memory: it fetched all of a
user's / the squadron's InventoryItem rows and grouped them in Java, then
inlined every entry into the /grouped response. Append-only inventory grows
unboundedly per stack, so that is O(rows) per grouped read and ships the full
entry list on every page load.

Stacks are now aggregated in SQL. A GROUP BY over the eight-dimension natural
key returns an InventoryStackAggregate projection (sum, amount-weighted
quality, max, count), and the /grouped response carries only the collapsed
stack rows. A stack's entries are fetched lazily and paginated on expand via
new GET /api/v1/inventory/{my-inventory|all}/stack/entries endpoints
(oldest-first, default 20 / max 100 per page), keyed off the stock-identity
fields the stack already exposes. A composite index
idx_inventory_item_stack_key (Flyway V142) backs both the GROUP BY and the
per-stack entries lookup.

Frontend: InventoryStackDto drops the inline entries; the stack toggle on
inventory-my / inventory-admin becomes an AJAX fetch-on-expand that renders a
new fragments/inventory-stack-entries fragment with per-stack pagination. The
per-entry actions (book-out, note, association, bulk-select) keep working
unchanged via the existing krtEvents delegation. This is the third in-place
shape change of the internal-only /grouped endpoint (ADR-0003 carve-out).

Specs: REQ-INV-002 amended (SQL grouping, stack-only response) and new
REQ-INV-005 (lazy, paginated, index-backed entries); ADR-0003 consequences
updated; openapi.json regenerated; CHANGELOG.

Refs #467

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Signed-off-by: Lucas Greuloch (greluc) <lucas.greuloch@gmail.com>